--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
     "@vitejs/plugin-react-refresh": "^1.1.0",
+    "amfe-flexible": "^2.2.1",
+    "autoprefixer": "^10.2.5",
+    "postcss-pxtorem": "^6.0.0",
     "typescript": "^4.1.2",
     "vite": "^2.0.0"
   }
