--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-loading": "^2.0.3",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "vconsole": "^3.4.0"
   },
   "devDependencies": {
     "@types/node": "^14.14.37",
