--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "vconsole": "^3.4.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^12.1.1",
+    "@commitlint/config-conventional": "^12.1.1",
     "@types/node": "^14.14.37",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
@@ -24,8 +26,12 @@
     "@vitejs/plugin-react-refresh": "^1.1.0",
     "amfe-flexible": "^2.2.1",
     "autoprefixer": "^10.2.5",
+    "husky": "^6.0.0",
     "postcss-pxtorem": "^6.0.0",
     "typescript": "^4.1.2",
     "vite": "^2.0.0"
+  },
+  "hooks": {
+    "commit-msg": "commitlint -e $HUSKY_GIT_PARAMS"
   }
 }
