--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "typescript": "^4.1.2",
     "vite": "^2.0.0"
   },
-  "hooks": {
-    "commit-msg": "commitlint -e $HUSKY_GIT_PARAMS"
-  }
+	"husky": {
+		"hooks": {
+			"commit-msg": "commitlint -e $HUSKY_GIT_PARAMS"
+		}
+	}
 }
