--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "prepare": "husky install",
+		"commit-msg": "commitlint -e $HUSKY_GIT_PARAMS"
   },
   "dependencies": {
     "dayjs": "^1.10.4",
@@ -30,10 +32,5 @@
     "postcss-pxtorem": "^6.0.0",
     "typescript": "^4.1.2",
     "vite": "^2.0.0"
-  },
-	"husky": {
-		"hooks": {
-			"commit-msg": "commitlint -e $HUSKY_GIT_PARAMS"
-		}
-	}
+  }
 }
