feat: 新增github api并对request类做适配

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 VITE_API_HOST=https://www.fastmock.site/mock/17ad4659e546df135e2027055aba5443
 VITE_NETEASE_API=https://netease-cloud-music-api-orcin.vercel.app
+VITE_GITHUB_API=https://api.github.com
